# todoB3-Ifpi

./: .gitignore  README.md  pyproject.toml
src/templates/: analise.html  index.html  layout.html  style.css
src/todob3_dev/: controllers.py  create_table.py  db.py  main.py  models.py  urls.py
src/todob3_dev/bovespa/: b3.py
tests/: test_preco_medio.py  test_todob3_dev.py
